push code to git

--- a/css/common-fram.css
+++ b/css/common-fram.css
@@ -328,7 +328,7 @@ a.content-titles:hover  {
 
 .rightblock ul {
 	list-style: none;
-	color: #DADADA;
+	color: #583E3E;
 	margin-top:10px;
 	margin-bottom:10px;
 	margin-left:10px;
